# coding-challenge

./: .gitignore  README.md  setup.cfg
src/fold/: fold_implementation.py
tests/: test_fold.py
