[metadata]
name = fold

author = Igor Rzhin
author_email = igor.rzhin@cdtm.de

version = 0.1

description = Fold function implementation
long_description = file: README.md
keywords = utility,

platforms = Linux

license = MIT

[options]
packages = find:
python_requires = >=3.8

[tool:pytest]
doctest_encoding = utf-8

[mutmut]
tests_dir = tests/
